--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,11 @@ script: "mvn verify"
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
+    - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in $GPG_DIR/pubring.gpg.enc
+        -out $GPG_DIR/pubring.gpg -d -a
+    - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in $GPG_DIR/secring.gpg.enc
+        -out $GPG_DIR/secring.gpg -d -a
+    - "$GPG_DIR/publish.sh"
+env:
+    global:
+        - GPG_DIR="`pwd`/deploy"
