Prepare next development version: 1.0.1-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.fridujo</groupId>
     <artifactId>classpath-junit-extension</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <name>classpath-junit-extension</name>
     <description>JUnit5 extension to run tests with classpath customizations</description>
