--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <maven-core.version>3.6.3</maven-core.version>
+        <maven-invoker.version>3.0.1</maven-invoker.version>
 
         <junit.jupiter.version>5.5.2</junit.jupiter.version>
         <assertj.version>3.14.0</assertj.version>
@@ -62,6 +63,11 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
             <version>${maven-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.shared</groupId>
+            <artifactId>maven-invoker</artifactId>
+            <version>${maven-invoker.version}</version>
         </dependency>
 
         <dependency>
