--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Maven
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -9,6 +10,10 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+# Gradle
+.gradle/
+build/
 
 # IntelliJ
 .idea/
